.infrastructure/main-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-service
  namespace: default
  labels:
    app: main
spec:
  ports:
    - port: 8000
      name: main
      protocol: TCP
  type: NodePort
  selector:
    app: main
